Fix form control alignment

--- a/media/com_jce/editor/css/src/override.css
+++ b/media/com_jce/editor/css/src/override.css
@@ -20,11 +20,6 @@ html {
     margin: 0;
 }
 
-.uk-form-horizontal .uk-form-row,
-.uk-form-horizontal .uk-form-controls {
-    align-items: center;
-}
-
 .uk-form-horizontal .uk-grid>.uk-form-label {
     line-height: 1.25;
 }
